k8s-config/applications/orkis/networking/backup-ingress-20260130.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.org/client-max-body-size":"500m","nginx.org/proxy-connect-timeout":"30s","nginx.org/proxy-read-timeout":"1800s","nginx.org/proxy-send-timeout":"1800s"},"name":"orkis-api-ingress","namespace":"orkis"},"spec":{"ingressClassName":"nginx","rules":[{"host":"api.orkis.kr","http":{"paths":[{"backend":{"service":{"name":"orkis-backend","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
      nginx.org/client-max-body-size: 500m
      nginx.org/proxy-connect-timeout: 30s
      nginx.org/proxy-read-timeout: 1800s
      nginx.org/proxy-send-timeout: 1800s
    creationTimestamp: "2026-01-22T06:55:23Z"
    generation: 3
    name: orkis-api-ingress
    namespace: orkis
    resourceVersion: "59679628"
    uid: 082b866d-01b2-4614-a490-c9da92f2b52a
  spec:
    ingressClassName: nginx
    rules:
    - host: api.orkis.kr
      http:
        paths:
        - backend:
            service:
              name: orkis-backend
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer: {}
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.org/client-max-body-size":"500m","nginx.org/proxy-buffer-size":"8k","nginx.org/proxy-buffers":"4 8k","nginx.org/proxy-connect-timeout":"30s","nginx.org/proxy-read-timeout":"1800s","nginx.org/proxy-send-timeout":"1800s","nginx.org/websocket-services":"orkis-front"},"name":"orkis-app-ingress","namespace":"orkis"},"spec":{"ingressClassName":"nginx","rules":[{"host":"orkis.kr","http":{"paths":[{"backend": [...]
      nginx.org/client-max-body-size: 500m
      nginx.org/proxy-buffer-size: 8k
      nginx.org/proxy-buffers: 4 8k
      nginx.org/proxy-connect-timeout: 30s
      nginx.org/proxy-read-timeout: 1800s
      nginx.org/proxy-send-timeout: 1800s
      nginx.org/websocket-services: orkis-front
    creationTimestamp: "2025-06-30T01:31:52Z"
    generation: 14
    name: orkis-app-ingress
    namespace: orkis
    resourceVersion: "46736277"
    uid: 6679e9c8-683b-4fb7-b7e7-4eda6b1a670f
  spec:
    ingressClassName: nginx
    rules:
    - host: orkis.kr
      http:
        paths:
        - backend:
            service:
              name: orkis-front
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: demo-design.orkis.kr
      http:
        paths:
        - backend:
            service:
              name: orkis-front-design
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer: {}
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.org/client-max-body-size":"500m","nginx.org/lb-method":"ip_hash","nginx.org/proxy-connect-timeout":"30s","nginx.org/proxy-read-timeout":"1800s","nginx.org/proxy-send-timeout":"1800s"},"name":"orkis-sse-ingress","namespace":"orkis"},"spec":{"ingressClassName":"nginx","rules":[{"host":"api.orkis.kr","http":{"paths":[{"backend":{"service":{"name":"orkis-backend","port":{"number":80}}},"path":"/api/sse"," [...]
      nginx.org/client-max-body-size: 500m
      nginx.org/lb-method: ip_hash
      nginx.org/proxy-connect-timeout: 30s
      nginx.org/proxy-read-timeout: 1800s
      nginx.org/proxy-send-timeout: 1800s
    creationTimestamp: "2026-01-30T01:02:32Z"
    generation: 1
    name: orkis-sse-ingress
    namespace: orkis
    resourceVersion: "59679626"
    uid: db34791e-bacc-454c-ab4c-e72225999912
  spec:
    ingressClassName: nginx
    rules:
    - host: api.orkis.kr
      http:
        paths:
        - backend:
            service:
              name: orkis-backend
              port:
                number: 80
          path: /api/sse
          pathType: Prefix
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
